<resources>
    <string name="app_name">FreightIntegrationApp</string>

    <!-- Common -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="choose_role">Choose Role</string>
    <string name="driver">Driver</string>
    <string name="customer">Customer</string>

    <!-- Sign Up -->
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_button">Sign Up</string>

    <!-- Sign In -->
    <string name="sign_in_title">Sign In</string>
    <string name="sign_in_button">Sign In</string>

    <!-- Home -->
    <string name="welcome_message">Welcome!</string>
    <string name="logout_button">Log Out</string>

    <!-- Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_chats">Chats</string>
    <string name="menu_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
